--- a/demo/src/css/pages/_with_banner.scss
+++ b/demo/src/css/pages/_with_banner.scss
@@ -38,7 +38,7 @@
       }
     }
   }
-  #overview {
+  .ems-grid .ems-3-columns {
     h2 {
       border-bottom: 2px solid $elasticms_pink;
       padding-bottom: rem(15);
@@ -59,7 +59,7 @@
       }
     }
   }
-  #news {
+  .ems-dark-grid {
     h2 {
       font-weight: 300;
       margin-bottom: rem(20);
