--- a/demo/skeleton/template/page/blocks/main-banner.html.twig
+++ b/demo/skeleton/template/page/blocks/main-banner.html.twig
@@ -1,6 +1,7 @@
 {% extends '@EMSCH/template/page/blocks/abstract-block.html.twig' %}
 
 {% block widget %}
+    {% trans_default_domain trans_default_domain %}
     <div class="jumbotron px-0 rounded-0 mb-0" style="background-image: url({{ ems_asset_path(item.object.image, {
         _config_type: 'image',
         _width: 1176,
