--- a/demo/skeleton/template/page/by_type.html.twig
+++ b/demo/skeleton/template/page/by_type.html.twig
@@ -9,3 +9,18 @@
         {{ block("render", "@EMSCH/template/page/blocks/abstract-block.html.twig") }}
     {% endwith %}
 {% endblock %}
+
+{% block breadcrumb -%}
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb text-white">
+            <li class="breadcrumb-item">
+                <i class="fas fa-chevron-left mr-1"></i>
+                {% if currentStructure and attribute(currentStructure.getItemById(pathInfo.uid).parent.object, locale).title is defined %}
+                    <a class="text-white" href="{{ path('emsch_path', { path: attribute(pathsByUids, currentStructure.getItemById(pathInfo.uid).parent.id).path }) }}">{{ 'breadcrumb.back-to'|trans({('%title%'): attribute(currentStructure.getItemById(pathInfo.uid).parent.object, locale).title}) }}</a>
+                {% else %}
+                    <a class="text-white" href="{{ path('emsch_path') }}">{{ 'breadcrumb.back-to'|trans({('%title%'): 'breadcrumb.homepage'|trans}) }}</a>
+                {% endif %}
+            </li>
+        </ol>
+    </nav>
+{%- endblock %}
