--- a/demo/src/css/styles.scss
+++ b/demo/src/css/styles.scss
@@ -36,6 +36,7 @@ $admin-menu-font-color: #FFFFFF;
 
 @import "pages/with_banner";
 @import "pages/error";
+@import "pages/blocks";
 
 @import "custom";
 @import "debug";
