--- a/demo/skeleton/template/structure/by_path.html.twig
+++ b/demo/skeleton/template/structure/by_path.html.twig
@@ -1,7 +1,7 @@
 {% trans_default_domain trans_default_domain %}
 {% set structure = source %}
 {% set paths = source.paths|default([])|filter(p => p.locale == app.request.locale)|array_key('path') %}
-{% set pathsByUids = source.paths|default([])|array_key('uid') %}
+{% set pathsByUids = source.paths|default([])|filter(p => p.locale == app.request.locale)|array_key('uid') %}
 {% set pathInfo = attribute(paths, app.request.get('path')) %}
 
 {% set target = emsch_search_one(['section', 'page'], {
@@ -15,7 +15,7 @@
 {% set switchUrls = source.paths|filter(p => p.locale != app.request.locale and p.uid == pathInfo.uid)|array_key('locale')|map(p => path('emsch_path', {path: p.path, _locale: p.locale})) %}
 
 {% set source = target.source|default(null) %}
-{% set currentStructure = attribute(structure, app.request.locale).structure|default("[]")|ems_json_menu_nested_decode %}
+{% set currentStructure = structure.structure|default("[]")|ems_json_menu_nested_decode %}
 
 {% set baseTemplate = '@EMSCH/template/structure/target-not-found.html.twig' %}
 
@@ -25,15 +25,3 @@
     {% set baseTemplate = '@EMSCH/template/page/by_type.html.twig' %}
 {% endif %}
 {% extends baseTemplate %}
-
-{% block breadcrumb_items -%}
-    {% for breadcrumbItem in currentStructure.breadcrumb(pathInfo.uid)|default([]) %}
-        <li class="breadcrumb-item">
-            {% if attribute(pathsByUids, breadcrumbItem.id) is defined and pathInfo.uid != breadcrumbItem.id %}
-                <a href="{{ attribute(pathsByUids, breadcrumbItem.id).path }}">{{ breadcrumbItem.label }}</a>
-            {% else %}
-                {{ breadcrumbItem.label }}
-            {% endif %}
-        </li>
-    {% endfor %}
-{%- endblock %}
