fix(emsco): login page warning for bootstrap-datepicker.standalone.css.map
DevTools failed to load source map: Could not load content for https://colibri-admin.rsz.fgov.be/bundles/emscore/css/bootstrap-datepicker.standalone.css.map: HTTP error: status code 404, net::ERR_HTTP_RESPONSE_CODE_FAILURE

--- a/EMS/core-bundle/assets/css/app.scss
+++ b/EMS/core-bundle/assets/css/app.scss
@@ -26,7 +26,7 @@ $ionicons-font-path: $node-modules-path + "ionicons/dist/fonts/";
 @import "~ionicons/dist/scss/ionicons";
 @import "~bootstrap-select/sass/bootstrap-select";
 @import "~bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css";
-@import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.standalone.css";
+@import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.css";
 
 @import "ems";
 @import "./component/media_library";
