--- a/demo/skeleton/template/page/blocks/main-banner.html.twig
+++ b/demo/skeleton/template/page/blocks/main-banner.html.twig
@@ -21,7 +21,7 @@
         <div class="container-fluid container-lg">
             <div class="row">
                 <div class="col-12  col-md-6 col-xl-5 offset-xl-1">
-                    <h1>{{ attribute(source, locale).title }}</h1>
+                    <h1>{{ attribute(source, locale).title|default('Page\'s title') }}</h1>
                     {{ item.object.body|default('')|emsch_routing }}
                 </div>
             </div>
