--- a/demo/skeleton/template_ems/view/page-preview-template.twig
+++ b/demo/skeleton/template_ems/view/page-preview-template.twig
@@ -14,7 +14,7 @@
     {% for template in templates %}
         <div class="template-copy-row">
             <h2>{{ template.name }}</h2>
-            <button><i class="fa fa-copy"></i> Copy</button>
+            <button data-content="{{ template.content }}" class="ems_copy_to_json"><i class="fa fa-copy"></i> Copy</button>
             <div class="template-preview-iframe">
                 <iframe id="preview-iframe-{{ loop.index0 }}" src="/channel/preview/_emsch/templates/preview-iframe-{{ loop.index0 }}" width="100%" height="400" data-content="{{ template.content }}"></iframe>
             </div>
@@ -35,5 +35,12 @@
         const window = iframe.contentWindow || iframe.contentDocument.defaultView;
         window.postMessage(iframe.dataset.content, '*');
     });
+    const buttons = document.querySelectorAll(".ems_copy_to_json");
+    for (let i = 0; i < buttons.length; i++) {
+        const button = buttons[i];
+        button.addEventListener("click", function(){
+            localStorage.setItem('json_menu_nested_copy', button.dataset.content);
+        });
+    }
 </script>
 {% endblock %}
