--- a/demo/skeleton/template/page/blocks/paragraph.html.twig
+++ b/demo/skeleton/template/page/blocks/paragraph.html.twig
@@ -1,12 +1,7 @@
 {% extends '@EMSCH/template/page/blocks/abstract-block.html.twig' %}
 
 {% block widget %}
-    {% trans_default_domain trans_default_domain %}
-    <div class="container-fluid container-lg ems-paragraph">
-        <div class="row">
-            <div class="col-12">
-                {{ item.object.body|default('')|emsch_routing }}
-            </div>
-        </div>
+    <div class="ems_paragraph">
+        {{ item.object.body|default('')|emsch_routing }}
     </div>
 {% endblock widget %}
